--- a/.github/workflows/coderabbit-review.yml
+++ b/.github/workflows/coderabbit-review.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   code-review:
     runs-on: ubuntu-latest
+    steps:
       - name: Run CodeRabbit Review
         uses: coderabbitai/ai-pr-reviewer@v1
         with:
