--- a/.github/workflows/coderabbit-review.yml
+++ b/.github/workflows/coderabbit-review.yml
@@ -21,4 +21,4 @@ jobs:
           debug: false
           review_simple_changes: true
           review_comment_lgtm: false
-          model: gpt-4o-2024-11-20
+          model: gpt-3.5-turbo
