--- a/.github/workflows/coderabbit-review.yml
+++ b/.github/workflows/coderabbit-review.yml
@@ -21,4 +21,5 @@ jobs:
           debug: false
           review_simple_changes: true
           review_comment_lgtm: false
-          model: gpt-3.5-turbo
+          openai_light_model: gpt-3.5-turbo
+          openai_heavy_model: gpt-3.5-turbo
